# MenteruWellness

./: .gitignore  README.md  excelconversion.py  install_uv.ps1  main.py  pyproject.toml  マスタデータ.xlsx
config_settings/: config_common.py  config_optimize.py  config_predict.py  config_preprocess.py
data_module/: common_constants.py  runner.py
data_module/config/: config.yml  utils.py
data_module/data/CommonData/: filename.xlsx  preprocessed_column_name.xlsx  説明変数.xlsx
data_module/data/ModelBackUp/: README.md
data_module/data/NormalizedData/: README.md
data_module/db_utils/: database_client.py  db_host_tables.py
data_module/preprocess_utils/: data_preprocessor.py  utils.py
notebooks/: add_tables_to_dummy_db.ipynb  add_tables_to_dummy_db_EMPTY.ipynb  ウェルネス空調精度検証実行_4F西.ipynb
notebooks/EDA/: ウェルネス空調精度検証_4F東.ipynb  ウェルネス空調精度検証_5F東.ipynb  ウェルネス空調精度検証_5F西.ipynb  ウェルネス空調精度検証実行_4F西.ipynb
optimization_module/: optimize_logic.py  optimize_utils.py  runner.py
prediction_module/: runner.py
prediction_module/electricity_module/: prediction_logic.py  train_logic.py
prediction_module/utilities/: data_preprocess.py  models.py  plot_utils.py  score_utils.py
prediction_module/wellness_module/: comfort_logic.py  productivity_logic.py
